--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Universal AI Agent Hub - Guardian System",
   "short_name": "AI Hub",
-  "description": "Universal gateway to all free AI assistants with Guardian multi-channel prompt injection",
+  "description": "Universal gateway to all FREE AI assistants with Guardian multi-channel prompt injection. Zero cost, zero APIs.",
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#667eea",
@@ -22,20 +22,6 @@
     }
   ],
   "categories": ["productivity", "utilities"],
-  "screenshots": [
-    {
-      "src": "screenshot-wide.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
-    },
-    {
-      "src": "screenshot-narrow.png",
-      "sizes": "720x1280",
-      "type": "image/png",
-      "form_factor": "narrow"
-    }
-  ],
   "shortcuts": [
     {
       "name": "Launch ChatGPT",
@@ -55,7 +41,7 @@
       "name": "Guardian Control",
       "short_name": "Guardian",
       "description": "Open Guardian Control Panel",
-      "url": "/guardian-control.html",
+      "url": "/relay/setup-guide.html",
       "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'%3E%3Ctext x='48' y='60' text-anchor='middle' font-size='60'%3E🛡️%3C/text%3E%3C/svg%3E", "sizes": "96x96" }]
     }
   ],
